# curso-ia

./: .gitignore  llm-01.py  llm-02.py  main.py  notebook.ipynb  pyproject.toml  rag-qdrant.py  rag.py
agents/: exemplo-1.py  exemplo-2.py  exemplo-3.py  memory-1.py  memory-2.py  workflows-1.py  workflows-2.py  workflows-3.py
db/data/collection/ml_documents/: storage.sqlite
docling/: 1-extraction.py  2-extraction-images.py  3-chunking.py  4-hybrid-chunker.py
docling/test_output/: docling_paper_metadata.jsonl
index_dir/: MAIN_vb5jm9wunxd685h9.seg  _MAIN_1.toc
projeto/: ingestion.py  ingestion_old.py
projeto/app/: endpoint.py
projeto/utils/: edgar_client.py  semantic_chunker.py
tokenizacao/: tokenization-02.py  tokenization-03.py  tokenization-04.py
